--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <title> Keith Ly's Portfolio</title>
-    <link rel="stylesheet" href="./assets/css.style"/>  
+    <link rel="stylesheet" href="./assets/style.css"/>  
 </head>
 
 <body>
@@ -13,12 +13,14 @@
 
     <header>
         <h1>
-            Keith Ly's Portfolio 
+            Keith Ly
         </h1> 
-        <p> 
-            In my portfolio I will have the progress of what I have achieved during class placed onto this portfolio for any and all to view. 
-            This is not a completed work in the slightest and is meant to act as a place for me to further add things and develop as I continue. 
-        </p>
+       <nav> 
+        <a href="#About"> About ME</a>
+        <a href="#Work"> Work</a>
+        <a href="Contact"> Contact Information</a>
+        <a href="#"> Linkedin Contact</a>
+       </nav>
     </header>
 
     <main> 
@@ -30,7 +32,7 @@
                     This is a link to my github profile and all the work that I have done and will do. 
                 </p>
             </div>
-            
+
         </section>
     </main>
 
