--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="en"> 
 
 <head> 
     <meta charset="UTF-8"
@@ -24,16 +25,28 @@
     </header>
 
     <main> 
-        <section class="Row justify-center">
-            <div class="github-column">
-                <h2 class="Github Account"> Github link </h2>
-            </div class="github-body">
+        <section>
+            <div> 
+                <h2 class="about me"> About Me </h2> 
+            </div>
+                <p> This is an about me that will detail some relevant information about myself.</p>
+            <div>
+                <h2 class="Work"> To Be Added </h2>
+            </div>
                 <p>
-                    This is a link to my github profile and all the work that I have done and will do. 
+                    <a href="#" class="flex-item TBA"></a>
                 </p>
             </div>
-
+            <div> 
+                <h2 class="Contact">Contact Information </h2>
+            </div>
+            <div> 
+                <a href="telephone:(626)428-9140"> (626)428-9140</a>
+                <a href="Github">Github</a>
+            </div>
         </section>
     </main>
 
 </body>
+
+</html> 
