--- a/index.html
+++ b/index.html
@@ -1,52 +1,62 @@
 <!DOCTYPE html>
 <html lang="en"> 
 
-<head> 
-    <meta charset="UTF-8"
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <title> Keith Ly's Portfolio</title>
-    <link rel="stylesheet" href="./assets/style.css"/>  
-</head>
+    <head> 
+        <meta charset="UTF-8"
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+        <title> Keith Ly's Portfolio</title>
+        <link rel="stylesheet" href="./assets/style.css"/>  
+    </head>
 
-<body>
+    <body>
     
+        <header>
+            <h1>
+                Keith Ly
+            </h1> 
+            <nav> 
+            <a href="#About"> About Me</a>
+            <a href="#Work"> Work</a>
+            <a href="Contact"> Contact Information</a>
+            <a href="#"> Linkedin Contact</a>
+        </nav>
+        </header>
 
 
-    <header>
-        <h1>
-            Keith Ly
-        </h1> 
-       <nav> 
-        <a href="#About"> About ME</a>
-        <a href="#Work"> Work</a>
-        <a href="Contact"> Contact Information</a>
-        <a href="#"> Linkedin Contact</a>
-       </nav>
-    </header>
-
-    <main> 
-        <section>
+        <section class="main-banner"> 
             <div> 
-                <h2 class="about me"> About Me </h2> 
-            </div>
-                <p> This is an about me that will detail some relevant information about myself.</p>
-            <div>
-                <h2 class="Work"> To Be Added </h2>
-            </div>
-                <p>
-                    <a href="#" class="flex-item TBA"></a>
-                </p>
-            </div>
-            <div> 
-                <h2 class="Contact">Contact Information </h2>
-            </div>
-            <div> 
-                <a href="telephone:(626)428-9140"> (626)428-9140</a>
-                <a href="Github">Github</a>
+                <h2> Insert Subtitle </h2> 
             </div>
         </section>
-    </main>
+        <main class="main-part"> 
+            <section class="main-section" id="me">
+                <div> 
+                    <h2 class="about me"> About Me </h2> 
+                </div>
+                    <p> This is an about me that will detail some relevant information about myself.</p>
+                    <p> Aside from the work that will be posted here, I spend a large amount of my time creating and learning how to further the subjects that I have dedicated parts of my life to which include but are not limited to:</p>
+                    <p> Writing stories and insuring that my brain doesn't stagnate, building keyboards, and continuously improving communicative skills amongst myself and my peers.</p> 
+             </div>
+            </section>
 
-</body>
+            <section class="main-section" id="work"> 
+                <h2> To Be Added </h2>
+                <div class="flex-container">
+                    <a href="#" class="flex-item TBA"></a>
+                    <a href="#" class="flex-item TBAp2"></a>
+                </div>
+            </section>
 
+            <section class="main-section-contact" id="contact">
+                <h2>Contact Information </h2>
+                <div> 
+                    <address> 
+                        <a href="telephone:(626)428-9140"> (626)428-9140</a>
+                        <a href="GMAIL: Keithly009@gmail.com"> Gmail: Keithly009@gmail.com </a>
+                        <a href="Github">Github</a>
+                    </address>
+                </div>
+            </section>
+        </main>
+    </body>
 </html> 
