Problems still linger, however they will be resolved at the next available time

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 <div> 
                     <p> This is an about me that will detail some relevant information about myself.</p>
                     <p> Aside from the work that will be posted here, I spend a large amount of my time creating and learning how to further the subjects that I have dedicated parts of my life to which include but are not limited to:</p>
+                    <p> I have full intentions of making improvements on this Portfolio and improving on this first draft, making it significantly better. </p>
                 </div>
             </section>
 
